fixed alignment issues when secondary button added

--- a/components/src/core/components/TableSidebar/table-left-panel.scss
+++ b/components/src/core/components/TableSidebar/table-left-panel.scss
@@ -18,7 +18,7 @@
       display: inline-flex;
     }
     :deep(.count-container) {
-      width: 95%;
+      width: 100%;
     }
     :deep(.oxd-button) {
       padding-right: 10px;
@@ -27,26 +27,24 @@
     .oxd-table-left-panel--toggle-btn {
       top: 40px;
     }
-    .table-header-action-secondary-btn{
-      margin-left: 0.5rem;
-      margin-top: -0.5rem;
+    .table-header-action-secondary-btn {
+      margin: 0rem 0 0rem 0.5rem;
     }
     .oxd-table-left-panel--separator {
-      margin: 0.5rem 0.9rem 1rem 0.5rem;
+      margin: 0rem 0.3rem 1rem 0.3rem;
     }
-    .no-label{
+    .no-label {
       padding-right: 20px;
       padding-left: 20px;
     }
-    .table-header-action-btns{
+    .table-header-action-btns {
       display: flex;
       align-items: center;
     }
-    padding-right: 0px;
-    &.with-secondary-collapsed{
+    &.with-secondary-collapsed {
       padding-right: 10px;
       .oxd-table-left-panel--separator {
-        margin: 0.5rem 0.3rem 1rem 0.5rem;
+        margin: 0rem 0.9rem 1rem 0.5rem;
       }
     }
   }
@@ -144,7 +142,7 @@
     }
   }
 }
-.table-header-action-secondary-btn{
+.table-header-action-secondary-btn {
   display: inline-flex;
   background-color: #f0fae4;
   :deep(.cls-1) {
@@ -152,5 +150,5 @@
   }
   &.collapsed-btn {
     margin-right: 0.5rem;
-    }
+  }
 }
